--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <!-- end header section -->
   </div>
 
-  <!-- nav section -->
+  <!-- nav section --->
 
   <section class="nav_section">
     <div class="container">
@@ -70,7 +70,7 @@
                   <a class="nav-link" href="produtos.html">Produtos </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="testimonial.html">Instagram</a>
+                  <a class="nav-link" href="https://www.instagram.com/crowstorestreetwear/">Instagram</a>
                 </li>
               </ul>
             </div>
