--- a/produtos.html
+++ b/produtos.html
@@ -57,13 +57,13 @@
                   <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="about.html">Contato </a>
+                  <a class="nav-link" href="contato.html">Contato </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="fruit.html">Produtos </a>
+                  <a class="nav-link" href="produtos.html">Produtos </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="https://www.instagram.com/jao01vitor/">Instagram</a>
+                  <a class="nav-link" href="https://www.instagram.com/crowstorestreetwear/">Instagram</a>
                 </li>
               </ul>
             </div>
